--- a/client/package.json
+++ b/client/package.json
@@ -11,8 +11,10 @@
     "jquery": "^3.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.2",
     "react-scripts": "5.0.1",
     "reactstrap": "^9.1.3",
+    "redux": "^4.2.0",
     "shallow-equal": "^1.2.1",
     "sweetalert2": "^11.4.28",
     "web-vitals": "^2.1.4"
