--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "react-cookies": "^0.1.1",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.2",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "reactstrap": "^9.1.3",
     "redux": "^4.2.0",
